# cpp_monads

./: .gitignore  CMakeLists.txt
doc/: Doxyfile
include/monads/: applicative.hpp  crtp.hpp  functor.hpp  mapping.hpp  type_traits.hpp
tests/: tests.cpp
